updating research projects

--- a/research.html
+++ b/research.html
@@ -159,23 +159,12 @@
 								<h2 class="title"> Research Summary</h2>
 
 								<div class="row">
-									<div class="col-md-8">
+									<div class="col-md-12">
 										<p style="text-align:justify">On this page you can find my current main research
 											Interests and short descriptions of the main research projects
 											in which I am currently involved.</p>
 									</div>
-									<div class="col-md-4">
-										<div class="subtitle text-center">
-											<h3>Interests</h3>
-										</div>
 
-										<ul class="ul-boxed list-unstyled">
-											<li>Empirical Software Engineering</li>
-											<li>Software Maintenance</li>
-											<li>Human Aspects</li>
-											<li>Code Review</li>
-										</ul>
-									</div>
 								</div>
 							</div>
 						</div>
@@ -193,6 +182,125 @@
 
 
 								<ul class="ul-withdetails ul-boxed list-unstyled">
+
+
+
+
+									<li>
+										<div class="row">
+
+											<div class="col-sm-8 col-md-10">
+
+												<div class="meta" >
+													<h3> MAINTAIN - Intelligent Maintenance of Software Systems</h3>
+
+													<p>2024 - Present</p>
+													<p>Project Coordinator: Dr. Matheus Paixão (UECE)
+													</p>
+													<p>Sponsors: Brazilian National Council for Scientific
+														and Technological Development (CNPq)</p>
+
+													<p style="text-align:justify">Partners: Anderson Uchôa (UFC, Brasil),
+														Matheus Paixão (UECE, Brasil), Paulo Henrique Mendes Maia (UECE,
+														Brasil), Jerffeson Teixeira de Souza (UECE,
+														Brasil), Ismayle de Sousa Santos (UECE, Brasil), Allysson Allex de Paula Araújo (UFCA, Brasil), Thiago do Nascimento Ferreira (University Of Michigan, EUA), and Chaiyong Ragkhitwetsagul (Mahidol University, Thailand)</p>
+
+													<p>Keywords:
+														<span class="badge badge-info">natural processing language</span>
+														<span class="badge badge-info">software maintenance</span>
+														<span class="badge badge-info">machine learning</span>
+														<span class="badge badge-info">developer</span>
+													</p>
+
+
+
+												</div>
+											</div>
+										</div>
+
+
+										<div class="details">
+											<p style="text-align:justify">Currently, digital technologies are used for several aspects of an individual's life, such as entertainment, work etc. Hence, the software industry grows every year with a constant increase in the number of products being developed. According to Sommerville, Software Engineering (SE) consists of the usage of scientific approaches to solve software problems. As a sub-area of SE, Software Maintenance refers to updating software after it has been deployed to its users. Among the maintenance tasks, one may mention bug fixing, source code improvement, technical debt management etc. As pointed out by Lehman, software needs to constantly change to remain useful. Thus, on average, more than half of a software project's resources are spent on maintenance. Considering the existing software industry, the massive amount of data and the complexity of modern software generates scenarios where practitioners have difficulties in performing efficient maintenance tasks. In parallel, recent advances in Artificial Intelligence (AI) have been gaining notoriety. Techniques such as natural language processing, data mining and optimization have been successfully applied to several scientific and engineering areas. Thus, this project aims at investigating and using AI techniques to assist practitioners in software maintenance tasks. Data mining will be used to analyze large amounts of maintenance data to identify recurrent patterns and find best practices. We plan to employ natural language processing to assist in tasks related to text writing and comprehension, such as technical debt management and code review, for instance. We will apply optimization algorithms to combinatorial maintenance tasks, such as code modularization and test case prioritization, for example. Hence, this project will expand the scientific knowledge in SE by investigating and proposing new approaches for the maintenance of software systems.</p>
+										</div>
+									</li>
+
+									<li>
+										<div class="row">
+
+											<div class="col-sm-8 col-md-10">
+
+												<div class="meta" >
+													<h3> Modernization of Legacy Systems: (Semi-)Automated Support and Development Practices</h3>
+
+													<p>2023 - Present</p>
+													<p>Project Coordinator: Dr. Anderson Uchôa (UFC)
+													</p>
+													<p>Sponsors: Cearense Foundation for Scientific and Technological Development Support, Fortaleza, Brazil (FUNCAP)</p>
+
+													<p style="text-align:justify">Partners: Anderson Uchôa (UFC, Brasil),
+														Rafael Maiani de Mello (UFRJ, Brasil),
+														Matheus Paixão (UECE, Brasil), Paulo Henrique Mendes Maia (UECE,
+														Brasil), Carla Ilane (UFC, Brasil), and Alessandro Garcia (PUC-Rio, Brasil)
+													<p>Keywords:
+														<span class="badge badge-info">software modernization</span>
+														<span class="badge badge-info">software maintenance</span>
+														<span class="badge badge-info">machine learning</span>
+														<span class="badge badge-info">development practices</span>
+													</p>
+
+
+
+												</div>
+											</div>
+										</div>
+
+
+										<div class="details">
+											<p style="text-align:justify">
+												The State of Ceará is responsible for a significant portion of software development, accounting for about 20% of national production. Many of these software programs become legacy systems: they provide essential functionalities for organizations but use commonly outdated technologies. There is a great difficulty in maintaining or even modernizing these software programs, especially due to structural degradation that affects the code. However, several of these software programs are too important to be discarded. For organizations to remain competitive in national and international markets, it is crucial to modernize legacy software and use good software development practices. The inclusion of new disruptive technologies, such as microservices and Big Data, helps to: (i) avoid the discontinuation of essential legacy software, and (ii) offer various other opportunities for organizations. Additionally, the use of good development practices helps in the modernization of legacy software. To carry out such modernizations, one of the main practices used is the refactoring and review of software artifacts. Refactoring is the primary and most challenging practice, given that the level of degradation of legacy code requires complex restructurings. In this context, developers need to identify and review which software artifacts, e.g., source code, should undergo refactoring. Related studies indicate that the use of poor development practices can negatively influence the restructuring and reduction of the level of degradation of legacy code. Furthermore, software degradation with varying levels of development practice maturity is an inherent characteristic of national software production, including in the State of Ceará. Thus, the project aims to: (i) conduct studies with the legacy systems of the Ceará industry that are undergoing modernization; (ii) investigate software development practices that assist in the identification, application, and restructuring of legacy code; (iii) propose and develop a technique that aids in the process of modernizing and evolving legacy code; and (iv) evaluate the impact on software quality after the restructuring proposed by the technique.</p>
+										</div>
+									</li>
+
+									<li>
+										<div class="row">
+
+											<div class="col-sm-8 col-md-10">
+
+												<div class="meta" >
+													<h3> An Exploratory Study on Developers' Perception of Code Smells in AI-Enabled Systems
+
+													</h3>
+
+													<p>2022 - Present</p>
+													<p>Project Coordinator: Dr. Anderson Uchôa (UFC)
+													</p>
+													<p>Sponsors: Brazilian National Council for Scientific
+														and Technological Development (CNPq), PIBIC</p>
+
+													<p style="text-align:justify">Partners: Anderson Uchôa (UFC, Brasil), and
+														Juliana Alves Pereira (PUC-Rio, Brasil</p>
+
+													<p>Keywords:
+														<span class="badge badge-info">bad smells</span>
+														<span class="badge badge-info">software maintenance</span>
+														<span class="badge badge-info">machine learning</span>
+														<span class="badge badge-info">developer</span>
+													</p>
+
+
+
+												</div>
+											</div>
+										</div>
+
+
+										<div class="details">
+											<p style="text-align:justify">AI-enabled systems are composed of one or more components that learn how to perform a task from a given dataset. Similar to other complex systems, AI-enabled systems are also affected by poor code structures (e.g., code smells). In particular, the code quality of AI-enabled systems has rarely been studied. Unfortunately, little is known about the perception of developers of AI-enabled systems regarding the code smells that affect their systems. Understanding developers' perceptions is important to direct research efforts that aim to support the needs and problems of developers of AI-enabled systems. Our goal is to obtain empirically driven actionable insights for researchers and tool builders about the level of knowledge regarding code smells, their perceived criticality, and the procedures used by developers to remove or minimize the effects of code smells in AI-enabled systems. We intend to conduct an exploratory survey with developers involved in the development of AI-enabled systems, including frameworks, systems, and machine learning libraries. We will also include developers who have used these frameworks to build their AI-enabled systems. The main limitations of this study relate to its exploratory nature; as such, no hypotheses about the outcomes are presented at this time. Additionally, the control of completeness and clarity in open-ended responses within a survey becomes a source of bias. Finally, the external validity will depend on how representative our sample of participants is.</p>
+										</div>
+									</li>
+
+
+
 									<li>
 										<div class="row">
 
