--- a/services.html
+++ b/services.html
@@ -174,6 +174,7 @@
 								</div>
 								<p>I have served (or will serve) as TPC chair of the following events:</p>
 								<ul>
+									<li>19th Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS), Co-located with CBSoft 2025 </li>
 									<li>12th Workshop on Software Visualization, Evolution and Maintenance (VEM), Co-located with CBSoft 2024 </li>
 								</ul>
 
