--- a/services.html
+++ b/services.html
@@ -170,7 +170,7 @@
 							<div class="section-container">
 
 								<div class="title text-center">
-									<h3>Events Organisation</h3>
+									<h3>Events Organization</h3>
 								</div>
 								<p>I have served (or will serve) as TPC chair of the following events:</p>
 								<ul>
